# Amctl

./: CODE_OF_CONDUCT.md  MANIFEST.in  README.md  pyproject.toml
src/amctl/: __init__.py  __main__.py  _bug.py  cli.py  colors.py  license.py  project.py  renderer.py  templating.py  uv_util.py  version_resolver.py
src/amctl/templ/: __init__.py
src/amctl/templ/amcore/: __init__.py  pyproject.toml.tmpl
src/amctl/templ/amctl_tmpl/: __init__.py  pyproject.toml.tmpl
src/amctl/templ/amctl_tmpl/src/amctl/templ/{{ name }}/: __init__.py.tmpl
src/amctl/templ/amsense/: __init__.py  pyproject.toml.tmpl
src/amctl/templ/amsense/src/{{ name }}/: __init__.py.tmpl
