[project]
name = "amctl"
version = "0.1.0"
description = "CLI for Project Amrita"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.4.1",
    "colorama>=0.4.6",
    "importlib>=1.0.4",
    "jinja2>=3.1.6",
    "requests>=2.34.2",
    "tomli>=2.4.1",
    "uv>=0.11.17",
]

[project.scripts]
amctl = "amctl:__main__.main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["amctl","amctl.*"]

[tool.setuptools.package-data]
"amctl" = ["templ/*.tmpl"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.8",
    # "pytest>=8.4.1",
    "py-spy>=0.4.1",
    "pyright>=1.1.407",
]
package = true

[tool.uv.sources]
amctl = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
    "I",     # isort
    "PERF",  # pylint-performance
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "E501",   # line-too-long
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.pyright]
typeCheckingMode = "standard"
